Should be the final commit

--- a/about.html
+++ b/about.html
@@ -23,16 +23,21 @@
     <h1>About Us</h1>
     <section id="mission">
         <h2>Our Mission</h2>
-        <p>This is the about page of our basic website.</p>
+        <p>This is the about page of the Dungus Page.</p>
     </section>
     <section id="team">
         <h2>Our Team</h2>
-        <p>We have a dedicated team to help you.</p>
+        <p>I'm only one guy but i'll try my best.</p>
     </section>
     <section id="github">
         <h2>The Github page</h2>
         <p>
             <a class="btn" href="https://github.com/DrDingus117" target="_blank" rel="noopener noreferrer" aria-label="Visit GitHub profile">Visit my GitHub</a>
+        </p>
+         <section id="Linkedin">
+        <h2>The Linkedin page</h2>
+        <p>
+            <a class="btn" href="https://www.linkedin.com/in/marcus-pendleton-9b4b67392/" target="_blank" rel="noopener noreferrer" aria-label="Visit GitHub profile">Visit my Linkedin </a>
         </p>
     </section>
     <script src="script.js"></script>
