--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <h1>About Us</h1>
     <section id="mission">
         <h2>Our Mission</h2>
-        <p>This is the about page of the Dungus Page.</p>
+        <p>I don't really have a mission except having some fun making this, and making it past this class.</p>
     </section>
     <section id="team">
         <h2>Our Team</h2>
