--- a/index.html
+++ b/index.html
@@ -149,15 +149,6 @@
     </section>
 
     <section>
-        <figure>
-            <img src="./assets/img/monster.jpg" alt="Monster Zero Ultra Sunrise." width="500" height="600" loading="lazy" style="max-width:100%;height:auto;display:block;"/>
-            <figcaption>The same void as the 3DS</figcaption>
-        </figure>
-        <p>
-           I'm not a big Zero Sugar dronk fan cause usualy they taste odd
-        </p>
-    </section>
-    <section>
    
         
          <section>
@@ -178,7 +169,7 @@
         </p>
     </section>
         <footer>
-    <p>Copyright 2025..</p>
+    <p>There shouldn't be a copyright thing on this</p>
     </footer>
     <script src="script.js"></script>
 </body>
