Saw it was Id and not Is for one part

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             From September to November, Codecademy helped me learn the basics outside the classroom. It requires a subscription, which is fine for learning for a year or so. I wonder if Cybersecurity will require this?
     
      <p>
-            <a class="btn" href="https://github.com/DrDingus117/basic-website--2-" target="_blank" rel="noopener noreferrer" aria-label="Visit GitHub profile">Theres only one project I've worked on that i remembered to commit so here it id</a>
+            <a class="btn" href="https://github.com/DrDingus117/basic-website--2-" target="_blank" rel="noopener noreferrer" aria-label="Visit GitHub profile">Theres only one project I've worked on that i remembered to commit so here it is</a>
         </p>
         <p>
     I just have this final project to complete for these three classes before I can let my mind rest for the remainder of the month.
