--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </p>
     </section>
         <footer>
-    <p>There shouldn't be a copyright thing on this</p>
+    <p>Class was fun but now i'm done. Copyright 2025</p>
     </footer>
     <script src="script.js"></script>
 </body>
