--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <section>
         <figure>
             <img src="./assets/img/wiiu.jpg" alt="Wii U" width="500" height="600" loading="lazy" style="max-width:100%;height:auto;display:block;"/>
-            <figcaption>32 GB Wii U.</figcaption>
+            <figcaption>The Void still.</figcaption>
         </figure>
         <p>
            This is the last game thing I will talk about for now. I'm a collector of old consoles like the PS1 as an example
